<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dob_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ActivitiesFragment.Accounts.DateOfBirthF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/d_bottom_gray_line"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingStart="@dimen/_12sdp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageButton
                android:id="@+id/goBack"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_back"
                android:tint="@color/black" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/main_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_s_your_birthday"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/your_birthday_won_t_be_shown_publicly"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/_11sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_4sdp">

                <com.ycuwq.datepicker.date.DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    app:selectedTextColor="@color/colorPrimary"
                    app:wheelCurtainColor="@color/white"
                    app:zoomInSelectedItem="true" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/where_are_you_located"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"/>

            <RelativeLayout
                android:layout_marginTop="@dimen/_4sdp"
                android:id="@+id/country_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/d_bottom_gray_line">

                <ImageView
                    android:id="@+id/country_img"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/ic_location"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@+id/country_img"
                    android:text="@string/country" />

                <TextView
                    android:id="@+id/country_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/right_arrow"
                    android:text="@string/not_applicable" />

                <ImageView
                    android:id="@+id/right_arrow"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_next"
                    app:tint="@color/black" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_dob_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:clickable="false"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/next"
                android:textSize="@dimen/_11sdp"
                android:theme="@style/Button_style" />

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>