<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upgrade_f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesFragment.Accounts.UpgradeA">

    <LinearLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:orientation="vertical"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_300sdp"
        android:background="@drawable/d_top_left_right_radius">

        <ImageView
            android:layout_alignParentTop="true"
            android:id="@+id/goBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_12sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_white_cross"
            app:tint="@color/black" />


        <TextView
            android:id="@+id/login_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_48sdp"
            android:gravity="center"
            android:text="@string/apply_as_croaker_or_publisher"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tabBottom"
            android:layout_below="@+id/login_title_txt"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:id="@+id/login_details_RL3_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_marginEnd="@dimen/_38sdp">

                <RelativeLayout
                    android:id="@+id/croaker_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/login_btn_draw">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_4sdp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_croak" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:gravity="center"
                        android:text="@string/apply_as_croaker"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="normal" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/publisher_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_below="@+id/croaker_btn"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/login_btn_draw">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/apply_as_publisher"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/ic_topic" />

                </RelativeLayout>


            </RelativeLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/tabBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_22sdp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>
